# pacs

assignemnt2/: Bisection.cpp  Bisection.h  CMakeLists.txt  QuasiNewton.cpp  Secant.cpp  Secant.h  SolverBase.cpp  SolverBase.h  main.cpp  parameters.cpp  readParameters.cpp  readParameters.hpp
assignemnt2/10699471/: Bisection.cpp  Factory.hpp  QuasiNewton.cpp  QuasiNewton.h  README.txt  Secant.cpp  SolverBase.cpp  SolverBase.h  loader.hpp  main.cpp  makefile  parameters_Bisection.pot  parameters_QuasiNewton.pot  parameters_Secant.pot  plot_error_Bisection.sh  plot_error_QuasiNewton.sh  plot_error_Secant.sh
assignemnt2/my_compilation/: Bisection.h  CMakeLists.txt  QuasiNewton.h  Secant.cpp  Secant.h  SolverBase.cpp  parameters_secant.pot  plot_error_secant.sh
assignemnt2/my_compilation/partial/: Bisection.cpp  SolverBase.h  main.cpp  parameters_bisection.pot
assignemnt2/test/: Bisection.cpp  Bisection.h  Secant.cpp  Secant.h  SolverBase.h  main  main.cpp  makefile  parameters_bisection.pot  parameters_secant.pot
assignment1/: CMakeLists.txt  GetPot  Newton.cpp  Newton.h  ODE.cpp  ODE.h  main.cpp  parameters.hpp
esercitazione6eser1/: CMakeLists.txt  Function.cpp  Function.h  Newton.cpp  Robust.cpp  Robust.h  RootFinder.h
esercitazioni/esercitazione6eser1/: Bisection.cpp  Bisection.h  Newton.h  RootFinder.cpp  bn_allinone.cpp
var/assignment2/: Bisection.h  Secant.cpp
var/path/: CMakeLists.txt  makefile  util
var/path/mycomp/: main  (+2 more)
var/return_copy/: CMakeLists.txt  main.cpp
var/template_functions/: CMakeLists.txt  main.cpp
var/templates/: main.cpp
